--- a/roles/sg/tasks/main.yml
+++ b/roles/sg/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
-- name: Create resource group
-  azure_rm_resourcegroup:
-    name: '{{ azure_resource_group }}'
-    location: '{{ azure_region }}'
-    tags: {{ azure_tag_dictionary }}
+- name: Create Azure Storage Account
+  azure_rm_storageaccount:
+    resource_group: {{Azure_Resource_Group}}
+    name: {{Azure_Storage_Group}}
+    account_type: {{Azure_Account_Type}}
