Updated host to localhost

--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 # This playbook deploys the whole application stack in this site.
 
 - name: Create New Azure Storage Group
-  hosts: all
+  hosts: localhost
 
   roles:
     - sg
